# pykinezumiko

./: .gitignore  .readthedocs.yml  README.en.md  README.md  conf.py  daemon.py  demo.py  guard.py  index.rst  makedocs.py  pyproject.toml  sphinx.py  zensical.toml
.github/workflows/: docs.yml  test.yml
docs/: commands.md  conf.py  expression.md  index.md  index.rst
docs/resources/: custom.css
docs/stylesheets/: extra.css
docs/template/: custom.css  syntax-highlighting.css  theme.css
pykinezumiko/: __init__.py  __main__.py  app.py  conf.py  daemon.py  docstore.py  humanity.py  humanity_test.py  makedocs.py  ponyfill.py  typesetting.py  xlsx.py
pykinezumiko/plugins/: 20clock.py  20img4img.py  20touchfish.py  30vlink.py  70db.py  70demo.py  95commander.py  __init__.py  avbv.py  clock.py  code.py  commander.py  demo.py  gate.py  img4img.py  jrrp.py  motd.py  this.py  touchfish.py
pykinezumiko/plugins/calendar/: __init__.py  chinese.txt  generate.js  jieqi.txt  test_test.py
pykinezumiko/plugins/calendar/__snapshots__/: test_test.ambr
src/: __init__.py  conf.py  humanity.py  messenger.py  typesetting.py
src/plugins/: 20clock.py  20code.py  20commander.py  20jrrp.py  70demo.py  90gate.py  95commander.py  commander.py  util.py
