[project]
name = "pykinezumiko"
version = "2.0.0"
description = "木鼠子 ⅱ Python Ver."
authors = ["Frog Chen <satgo1546@yeah.net>"]
license = "AGPL-3.0-only"
readme = "README.md"
# 至少3.14条巨蟒
requires-python = ">=3.14"
# 和它们的
dependencies = [
    # 独角迅猛龙
    "uvicorn>=0.41.0",
    # 小星星
    "starlette>=0.52.1",
    # 枕头
    "pillow>=12.1.1",
    # 颜料
    "pygments>=2.19.2",
    # 请求书
    "requests>=2.32.5",
    # 槲寄生
    "mistletoe>=1.5.1",
]

[dependency-groups]
dev = [
    "ruff>=0.15.4",
    "ty>=0.0.19",
]

[tool.ruff]
line-length = 114
