[project]
name = "pykinezumiko"
version = "2.0.0"
description = "木鼠子 ⅱ Python Ver."
authors = ["Frog Chen <satgo1546@yeah.net>"]
license = "AGPL-3.0-only"
readme = "README.md"
# 至少3.14条巨蟒
requires-python = ">=3.14"
# 和它们的
dependencies = [
    # 正则表达式
    "regex>=2026.2.28",
    # 独角迅猛龙
    "uvicorn>=0.41.0",
    # 小星星
    "starlette>=0.52.1",
    # 枕头
    "pillow>=12.1.1",
    # 颜料
    "pygments>=2.19.2",
    # 超文本传输协议增强版
    "httpx>=0.28.1",
    # 学究式的巨蟒
    "pydantic>=2.12.5",
    # 数值巨蟒
    "numpy>=2.4.3",
]

[dependency-groups]
dev = [
    # 不随波逐流的巨蟒正确
    "basedpyright>=1.38.2",
    # 假说
    "hypothesis>=6.151.9",
    # 巨蟒测试
    "pytest>=9.0.2",
    # 铁锈花
    "ruff>=0.15.4",
    # 糖浆
    "syrupy>=5.1.0",
    # 禅理
    "zensical>=0.0.27",
]

[tool.basedpyright]
typeCheckingMode = "standard"

[tool.pytest]
strict = true
addopts = [
    "--import-mode=importlib",
    "-m", "not slow",
]
markers = [
    "slow: excluded by default",
]

[tool.ruff]
line-length = 114
